# advent-of-code-2024

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: day_1.py
src/common/: input.py  inputs.py
