[tool.poetry]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Project repository for Advent of Code 2024"
authors = ["CameronWragg"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
